--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ogon project| Remote Desktop Service(s) for Linux</title>
+<title>ogon project | Remote Desktop Service(s) for Linux</title>
 <meta charset="UTF-8">
-<meta name="description" content="ogon | ogon - Remote Desktop Services are a set of services and utilities to create a fully featured RDP server.">
-<link rel="icon" href="icon.ico">
+<meta name="description" content="A collection of services and tools to turn any modern Linux system into a full-featured RDP server.">
 <meta name="keywords" content="ogon, remote desktop, remote desktop services, vdi, virtual desktop, rdp, remotfx, linux, server-side rendering, WTSAPI, virtual channels, session shadowing, bandwith managment">
 <meta name="author" content="Thincast Technologies GmbH">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
